CSS/style.css
/*colors: 28394a; 233656; 415B76; 7B9BA6; CDD6D5; EEF4F2; */

* {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    font-weight: 400;
}

html {
    font-family: 'Quicksand', arial, sans-serif;
    color: #CDD6D5;
    background-color: #0B0D0F;
    scroll-behavior: smooth;
}

.wrapper {
    max-width: 1280px;
    margin: 0 auto;
}

h2 {
    /* padding: 5px; */
    line-height: 10vh;
    /* border-bottom: 1px solid #CDD6D5; */
    font-size: 30px;
    text-align: center;
}

/* ------------------------------NAVIGATION------------------------------ */
nav {
    position: fixed;
    z-index: 1;
    width: 100%;
    background-color: #0B0D0F;
}

nav ul {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
    width: 100%;
    height: 50px;
}

nav ul li {
    list-style: none;
}

nav ul li a {
    display: block;
    margin: 5px 0;
    padding: 0 40px;
    color: #CDD6D5;
    line-height: 40px;
    text-decoration: none;
    cursor: pointer;
}

nav ul li a.activeSection {
    background-color: #232b35;
    animation: navBlink 0.5s linear 0s both;
}

nav ul li a:hover {
    color: #EEF4F2;
}

nav ul li a i {
    margin-right: 10px;
}

.arrow-up {
    position: fixed;
    bottom: 15px;
    right: 15px;
    width: 30px;
    height: 30px;
    -webkit-border-radius: 50%;
    border-radius: 50%;
    background-color: #415B76;
    -webkit-transition: 0.3s;
    -o-transition: 0.3s;
    transition: 0.3s;
    cursor: pointer;
}

.arrow-up a {
    color: inherit;
    text-decoration: none;
}

.arrow-up i {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    font-size: 20px;
}

.arrow-up:hover {
    background-color: #233656;
}

.burger-menu {
    display: none;
}




/* ------------------------------HEADER------------------------------ */
header {
    width: 100%;
    height: 100vh;
    background-image: url("../IMG/keyboard_1920.jpg");
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
}

.welcome {
    margin: 0 auto;
    padding-top: 25vh;
    padding-left: 15vw;
}

header h1 {
    color: #EEF4F2;
    font-size: 70px;
    font-family: 'Saira';
    text-shadow: 2px 2px 1px #233656;
}

header h2 {
    color: #EEF4F2;
    line-height: 120%;
    font-family: 'Saira';
    text-shadow: 2px 2px 1px #233656;
    letter-spacing: 2px;
    border: none;
    text-align: left;
}

/* ------------------------------About me------------------------------ */

.about-me-container {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    background-image: url("../IMG/keyboard_1920.jpg");
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
}

.about-me-container>div {
    padding: 2%;
    width: 50%;
    background-color: #233656dd;
}

.about-me-container>div:nth-child(2),
.about-me-container>div:nth-child(3) {
    background-color: #0000;
}

.about-me-description-text p {
    margin: 2% 0;
    display: block;
    line-height: 150%;
    text-align: justify;
}

.about-me-description-text p a {
    color: #EEF4F2;
    font-weight: 700;
}

.about-me-container .about-me-technologies div.technology-logos {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-justify-content: space-around;
    -ms-flex-pack: distribute;
    justify-content: space-around;
}

.about-me-container .about-me-technologies div.technology-logos .technology-logo {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    padding: 2% 5%;
    width: 25%;
}

.about-me-container .about-me-technologies div.technology-logos .technology-logo p {
    margin-top: 15%;
    text-align: center;
}

.about-me-container .about-me-technologies div.technology-logos img {
    height: 100px;
}

/* ------------------------------workflow------------------------------ */


.my-workflow-container {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-justify-content: space-around;
    -ms-flex-pack: distribute;
    justify-content: space-around;
    width: 100%;
}

.my-workflow-unit {
    -webkit-flex-basis: calc(100%/4);
    -ms-flex-preferred-size: calc(100%/4);
    flex-basis: calc(100%/4);
    padding: 2vw;
    text-align: center;
}

.my-workflow-unit i {
    width: 116px;
    line-height: 110px;
    color: #415B76;
    border: 3px solid #415B76;
    -webkit-border-radius: 50%;
    border-radius: 50%;
    font-size: 50px;
    -webkit-transition: 0.2s;
    -o-transition: 0.2s;
    transition: 0.2s;
}

.my-workflow-unit i:hover {
    background-color: #415B76;
    color: #CDD6D5;
}

.my-workflow-unit>h3 {
    display: block;
    height: 62px;
    margin: 15px 0;
    font-size: 25px;
}
/* ... */

